# pretest-py

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
docs/: citation.rst  conf.py  getting_started.rst  index.rst  requirements.txt  theory.rst  user_guide.rst
docs/api/: core.rst  data.rst  index.rst  pipeline.rst  sensitivity.rst  simulation.rst  visualization.rst
docs/tutorials/: index.rst
examples/: 01_quickstart.py  02_prop99_replication.py  03_advanced_pipeline.py  04_event_study_plot.py  05_monte_carlo_simulation.py  README.md
src/pretest/: __init__.py  _compat.py  _display.py  api.py  cli.py  confidence_intervals.py  covariance.py  critical_value.py  data_estimators.py  dgp.py  estimators.py  kappa.py  m_sensitivity.py  m_sensitivity_plots.py  monte_carlo.py  options.py  pipeline.py  plotting.py  replay_harness.py  replay_packets.py  replay_summary.py  result_schema.py  severity.py  severity_se.py  simulation.py  validation.py
src/pretest/data/prop99_replay/: pretest_overall_auxiliary_contract.yaml  pretest_overall_auxiliary_diagnostic_verifier_input.yaml  prop99_overall_capture_packet_template.yaml  prop99_overall_capture_verifier_input.yaml  prop99_overall_precapture_contract.yaml  prop99_replay_driver.yaml  prop99_replay_summary_template.yaml  prop99_window_1985_1995_m5_iter_records.csv
src/pretest/data/prop99_replay/results/python/: PROP99-FULL-M1-ITER-stdout.yaml  PROP99-FULL-M1-ITER-stored-results.yaml  PROP99-FULL-M5-ITER-stdout.yaml  PROP99-FULL-M5-ITER-stored-results.yaml  PROP99-WINDOW-1985-1995-M5-ITER-stdout.yaml  PROP99-WINDOW-1985-1995-M5-ITER-stored-results.yaml  PROP99-WINDOW-1985-1995-M5-OVERALL-stdout.yaml  PROP99-WINDOW-1985-1995-M5-OVERALL-stored-results.yaml
src/pretest/data/prop99_replay/results/stata/: PROP99-FULL-M1-ITER-stdout.yaml  PROP99-FULL-M1-ITER-stored-results.yaml  PROP99-FULL-M5-ITER-stdout.yaml  PROP99-FULL-M5-ITER-stored-results.yaml  PROP99-WINDOW-1985-1995-M5-ITER-critical-value-probe.yaml  PROP99-WINDOW-1985-1995-M5-ITER-stdout.yaml  PROP99-WINDOW-1985-1995-M5-ITER-stored-results.yaml  PROP99-WINDOW-1985-1995-M5-OVERALL-capture-metadata.yaml  PROP99-WINDOW-1985-1995-M5-OVERALL-graph-data-capture-status-drift.yaml  PROP99-WINDOW-1985-1995-M5-OVERALL-graph-data.yaml  (+3 more)
